--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="page__footer-follow">
   <ul class="social-icons">
-    <li><a href="../index.md"><i class="fas fa-home" aria-hidden="true"></i> Home</a></li>
+    <li><a href="../index.html"><i class="fas fa-home" aria-hidden="true"></i> Home</a></li>
     {% if site.data.ui-text[site.locale].follow_label %}
       <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
     {% endif %}
